--- a/front/src/components/Page1/CSS/WorkExp.css
+++ b/front/src/components/Page1/CSS/WorkExp.css
@@ -1,5 +1,13 @@
 .work-li {
-    height: 300px;
-    width: 500px;
-    margin: 50px;
+  display: flex;
+  flex-direction: column;     /* stacks text properly */
+  justify-content: center;    /* centers text vertically */
+  text-align: justify;
+
+  height: 80px;
+  width: 400px;
+  margin: 50px auto;          /* optional: centers the box horizontally */
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 8px;
 }
